# mlops-finance

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/predictions/: predictions.parquet
prometheus/: prometheus.yml
scripts/: retrain_simple.py  simulate_traffic.py
src/: train.py
src/data/: demo_data.py  features.py  fetch.py
src/monitoring/: drift.py
src/pipeline/: retrain_flow.py
src/serve/: app.py
tests/: test_features.py
